Refactor project structure and add Docker setup
Moved project files to modularized directories for better organization. Introduced a `docker-compose.yml` setup with Docker support for server and game components. Updated database and configuration paths, introduced environment variables, and refactored code to improve maintainability.

--- a/server/game.html
+++ b/server/game.html
@@ -7,7 +7,7 @@
         html, body {
             padding: 0;
             margin: 0;
-            background-image: url(/static/res/bg.jpg);
+            background-image: url("/static/res/bg.jpg");
             /*background-image: url(res/bg.jpg);*/
         }
         .container {
@@ -16,7 +16,7 @@
             align-items: center;
         }
         #canvas {
-            background-image: url(/static/res/grass.png);
+            background-image: url("/static/res/grass.png");
             /*background-image: url(res/grass.png);*/
         }
     </style>
